--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -29,7 +29,7 @@ shadow_port = 54320
 # The database major version to use. This has to be the same as your remote database's. Run `SHOW
 # server_version;` on the remote database to check.
 major_version = 15
-remote_url = "env(SUPABASE_URL)"
+# remote_url = "env(SUPABASE_URL)"
 
 [db.pooler]
 enabled = false
