update deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,10 @@ name: Infra CI & Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
+    paths:
+      # Trigger workflow only if migration files within this specific workspace change
+      - 'workspaces/xwoba-matchups-infra/supabase/migrations/**'
   workflow_dispatch:
 
 jobs:
@@ -25,6 +28,9 @@ jobs:
           version: latest
       
       - name: Link & Apply Migrations
+        working-directory: ./workspaces/xwoba-matchups-infra
         run: |
+          echo "Linking to Supabase project: $SUPABASE_PROJECT_REF"
           supabase link --project-ref $SUPABASE_PROJECT_REF
+          echo "Applying database migrations..."
           supabase db push
